Replace rollbar with sentry, load native node modules in production build, fix bug with album fetching and tag view, fix bug with displaying album covers in the bottom bar in production

--- a/app/styles.scss
+++ b/app/styles.scss
@@ -88,6 +88,8 @@
   flex-flow: column;
 
   height: 80px;
+  width: 100%;
+  max-width: 100%;
 
   background-color: $background3;
   box-shadow: 0px -5px 5px 0px rgba(0, 0, 0, 0.18), 0px -10px 20px 0px rgba(0, 0, 0, 0.09);
@@ -100,6 +102,8 @@
   flex: 1 1 auto;
   flex-flow: row;
   justify-content: center;
+  width: 100%;
+  max-width: 100%;
 }
 
 .track_info_wrapper {
